BugFix - Datenschutzbestimmung und Impressum -> Modal scrollbar Ergänzung Dokumenation

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -63,6 +63,7 @@ body {
     -moz-transition: opacity 400ms ease-in;
     transition: opacity 400ms ease-in;
     pointer-events: none;
+    overflow:auto;
 }
 .modalDialog:target {
     opacity:1;
